fix: add more gap options (#13)
* fix: add more gap options

* Design System Build

--- a/styles/themes/rosalind-dark.css
+++ b/styles/themes/rosalind-dark.css
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Thu, 05 Jan 2023 17:22:23 GMT
+ * Generated on Mon, 09 Jan 2023 21:07:19 GMT
  */
 
 :root {
@@ -628,9 +628,13 @@
   --ros-semantic-spacing-section-mobile-padding-x: 20px;
   --ros-semantic-spacing-section-desktop-padding-y: 96px;
   --ros-semantic-spacing-section-desktop-padding-x: 32px;
-  --ros-semantic-spacing-gap-component-lg: 16px;
-  --ros-semantic-spacing-gap-component-md: 12px;
-  --ros-semantic-spacing-gap-component-sm: 8px;
+  --ros-semantic-spacing-gap-component-xxxl: 56px;
+  --ros-semantic-spacing-gap-component-xxl: 48px;
+  --ros-semantic-spacing-gap-component-xl: 36px;
+  --ros-semantic-spacing-gap-component-lg: 24px;
+  --ros-semantic-spacing-gap-component-md: 16px;
+  --ros-semantic-spacing-gap-component-sm: 12px;
+  --ros-semantic-spacing-gap-component-xs: 8px;
   --ros-semantic-spacing-around-component-xxxl: 32px;
   --ros-semantic-spacing-around-component-xxl: 24px;
   --ros-semantic-spacing-around-component-xl: 20px;
